[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "na-hull-generator"
version = "0.1.0"
description = "Generate NavalArt-compatible hulls from OBJ models or procedural parameters."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "GRAY-XY" }]
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "python-multipart>=0.0.9"
]

[project.scripts]
na-hull-generator = "na_hull_generator.app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
